@@ -4,7 +4,7 @@ import org.gtk.gobject.*;
 import io.github.jwharm.javagi.interop.jextract.gtk_h;
 import static io.github.jwharm.javagi.interop.jextract.gtk_h.C_INT;
 import io.github.jwharm.javagi.*;
-import jdk.incubator.foreign.*;
+import java.lang.foreign.*;
 import java.lang.invoke.*;
 
 /**
@@ -86,7 +86,7 @@ public class TextIter extends io.github.jwharm.javagi.ResourceBase {
     public boolean backwardFindChar(TextCharPredicate pred, TextIter limit) {
         try {
             var RESULT = gtk_h.gtk_text_iter_backward_find_char(handle(), 
-                    CLinker.systemCLinker().upcallStub(
+                    Linker.nativeLinker().upcallStub(
                         MethodHandles.lookup().findStatic(JVMCallbacks.class, "cbTextCharPredicate",
                             MethodType.methodType(boolean.class, int.class, MemoryAddress.class)),
                         FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.JAVA_INT, ValueLayout.ADDRESS),
@@ -483,7 +483,7 @@ public class TextIter extends io.github.jwharm.javagi.ResourceBase {
     public boolean forwardFindChar(TextCharPredicate pred, TextIter limit) {
         try {
             var RESULT = gtk_h.gtk_text_iter_forward_find_char(handle(), 
-                    CLinker.systemCLinker().upcallStub(
+                    Linker.nativeLinker().upcallStub(
                         MethodHandles.lookup().findStatic(JVMCallbacks.class, "cbTextCharPredicate",
                             MethodType.methodType(boolean.class, int.class, MemoryAddress.class)),
                         FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.JAVA_INT, ValueLayout.ADDRESS),
